# tauri-app

./: .pnp.cjs  .prettierrc  README.md  index.html  package.json  tailwind.config.cjs
.github/workflows/: release.yml
src/: App.vue  main.css  main.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: backup.rs  main.rs
src/components/: Api.vue  Audio.vue  Data.vue  Greet.vue  Increment.vue  Local.vue  Machine.vue  Notification.vue  Shell.vue  Storage.vue  Store.vue  Welcome.vue
src/stores/: index.js
src/utils/: data.js  notify.js
