[package]
name = "tauri-app"
version = "1.0.0"
description = "A Tauri starter app by More Than Coding."
authors = ["Darcy Voutt"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
base64ct = "1.6.0"
machine-uid = "0.2.0"
tauri = { version = "1.2.4", features = ["app-all", "clipboard-write-text", "dialog-message", "fs-create-dir", "fs-read-dir", "fs-read-file", "fs-write-file", "http-all", "notification-all", "path-all", "shell-open", "window-start-dragging"] }
tokio = { version = "1.26.0", features = ["full"] }
reqwest = { version = "0.11.15", features = ["json"] }
sha2 = "0.10.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
